--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    background-image: url('IMG_4173.jpeg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  background-image: url("images/background-workshop.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
