--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@ body {
   background-attachment: fixed;
   background-position: center;
 }
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.55);
+  z-index: -1;
+}
