--- a/style.css
+++ b/style.css
@@ -1,18 +1,9 @@
-body { outline: 5px solid red !important; }
+body {
   background-image: url("images/workshop-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.55);
-  z-index: -1;
+  background-position: center center;
+  margin: 0;
+  padding: 0;
 }
